
Package: R.utils
================

Version: 0.9.8 [2007-11-26]
o Added copyFile() which safely copies a file by copying to a
  temporary file, which is then renamed.
o Added isEof() for connections to test for "End of File".
o Added reassignInPackage().
o Added dataFrame(), which allocated a data frame of given size
  and column classes.
o BUG FIX: writeRaw() of MultiVerbose returned a list of logicals.  
  Now it returns TRUE (invisibly).


Version: 0.9.7 [2007-09-17]
o BUG FIX/WORKAROUND: moveInSearchPath() would make the package 
  environment loose  the 'path' attribute, which is for instance is
  needed by packageDescription().  This would in turn cause 
  sessionInfo() to throw an error.  Now moveInSearchPath() makes sure
  to set all attributes on a moved package environment to what it
  used to be.


Version: 0.9.6 [2007-08-29]
o Made documentation for saveObject() and loadObject() public.
o Now the startup message when loading the package is generated with
  packageStartupMessage() so that it can be suppressed.
o Added flush() to TextStatusBar.  Added flush() to example(TextStatusBar)
  so it displays correctly on Rgui on Windows.
o Added bunzip2(), cf. gunzip().
o Added argument 'remove' to gunzip().
o BUG FIX: There was a typo in readWindowsShortcut() causing field
  'iconFilename' to potentially be invalid.  Thanks Tony Plate for
  reporting this. 


Version: 0.9.5 [2007-06-09]
o Updated code to pass the more strict R CMD check R v2.6.0.
o BUG FIX: Used omit.na() instead of na.omit() in static method 
  parseDebian() of System.


Version: 0.9.4 [2007-05-10]
o BUG FIX: readTable() tried to access base::read.table() but that was
  moved to 'utils' as of R v2.5.0.


Version: 0.9.3 [2007-05-09]
o BUG FIX: Using the R v2.4.x build of R.utils in R v2.5.0 gives
  "Error in parse.default(text = src) : 4 arguments passed to 
  'parse' which requires 6".  This is because the internal call
  in base::parse() use different sets of arguments in R v2.4.1 