@@ -7,7 +7,7 @@ Maintainer: Henrik Bengtsson <henrikb@braju.com>
 Depends: R (>= 2.4.0), R.oo
 Suggests: digest
 Description: This package provides utility classes and methods useful when programming in R and developing R packages.
-License: LGPL version 2.1 or newer (the releases)
+License: LGPL (>= 2.1)
 URL: http://www.braju.com/R/
 DevelURL: http://www.maths.lth.se/help/R/
 LazyLoad: TRUE
